# ComputeKERNEL

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  REQUIREMENTS.md  limine.conf
.cargo/: config.toml
.github/workflows/: build-iso.yml  (+3 more)
include/: limine.h
init/: Cargo.toml
kernel/: Cargo.toml  build.rs  linker.ld  printk.c  stubs.c
kernel/arch/x86_64/: cpu.c  gdt.c  idt.c  keyboard.c  mouse.c  pic.c  pit.c  syscall.c
kernel/drivers/: font.c  serial.c
kernel/init/: main.c
kernel/lib/: string.c
kernel/mm/: heap.c  pmm.c
kernel/net/: nic.c  sshd.c  stack.c
kernel/sched/: sched.c
kernel/shell/: shell.c
kernel/src/: main.rs  shell.rs
kernel/src/arch/x86_64/: gdt.rs  idt.rs  interrupts.rs  mod.rs
kernel/src/drivers/: acpi_driver.rs  ahci.rs  framebuffer.rs  keyboard.rs  mod.rs  nvme.rs  pci.rs  serial.rs  vga.rs
kernel/src/drivers/audio/: hda.rs  mod.rs
kernel/src/drivers/bluetooth/: hci.rs  mod.rs
kernel/src/drivers/network/: e1000.rs  mod.rs
kernel/src/drivers/usb/: mod.rs  xhci.rs
kernel/src/fs/: dev_fs.rs  ext4.rs  initramfs.rs  mod.rs  proc_fs.rs  sys_fs.rs  vfs.rs
kernel/src/memory/: frame_allocator.rs  heap.rs  mod.rs  paging.rs
kernel/src/net/: ethernet.rs  ip.rs  mod.rs  tcp.rs  udp.rs
kernel/src/process/: mod.rs  scheduler.rs  signal.rs
kernel/src/syscall/: mod.rs
kernel/vfs/: ramfs.c  vfs.c
rust/: Cargo.toml
scripts/: build-img.sh  build-iso.sh  check-env.sh  debug-gdb.sh  run-kvm.sh  run-qemu.sh  run-vbox.sh  run-vmware.sh  test.sh
targets/: x86_64-computekernel.json
tools/: gen_syscalls.py
(+25 files in other folders)
